refs #52997 レビュー指摘対応 チェックスタイルを確認し、自担当部分を修正。